--- a/css/style.css
+++ b/css/style.css
@@ -1,34 +1,19 @@
                         body {
                             font-size: 12px;
                             font-family: 'Roboto', sans-serif;
-                            background-color: #00004f;
                         }
                         
                         #header-nav {
-                            background-color: #ffff70;
+                            background-color: #003580;
                             border-radius: 0;
                             border: 0;
                         }
                         
-                        #logo-img {
-                            background: url(../images/yasuo.jpg) no-repeat center;
-                            width: 150px;
-                            height: 150px;
-                            margin: 10px 15px 10px 0px;
-                            border-radius: 72px;
-                        }
-                        
-                        img {
-                            height: 45px;
-                            width: 48px;
-                        }
-                        
                         .navbar-brand h1 {
                             font-size: 1.6em;
-                            text-transform: uppercase;
                             font-weight: bold;
-                            text-shadow: 1px 1px 1px #222;
                             line-height: .75;
+                            color: white;
                         }
                         
                         .navbar-brand a:hover,
@@ -36,59 +21,46 @@
                             text-decoration: none;
                         }
                         
-                        .navbar-brand p {
-                            color: #00004f;
-                            text-transform: uppercase;
-                            font-size: .7em;
-                            margin-top: 25px;
-                        }
-                        
-                        .navbar-brand p span {
-                            /*alinia el texto a la mitad de la imagen*/
-                            vertical-align: middle;
-                        }
-                        /*copiado y oegadi*/
-                        
                         #nav-list {
                             margin-top: 10px;
                         }
                         
                         #nav-list a {
-                            color: #951C49;
+                            color: white;
                             text-align: center;
                         }
                         
                         #nav-list a:hover {
-                            background: #E7E7E7;
+                            background: #0e96b1;
                         }
                         
                         #nav-list a span {
                             font-size: 1.8em;
                         }
                         
-                        #phone {
-                            margin-top: 5px;
-                        }
-                        
-                        #phone a {
-                            /* Phone number */
-                            text-align: right;
-                            padding-bottom: 0;
-                        }
-                        
-                        #phone div {
-                            /* We Deliver */
-                            color: #557c3e;
-                            text-align: right;
-                            padding-right: 15px;
-                        }
-                        
                         .navbar-header button.navbar-toggle,
                         .navbar-header .icon-bar {
-                            border: 1px solid #00009f;
+                            border: 1px solid #0e96b1;
                         }
                         
                         .navbar-header button.navbar-toggle {
                             clear: both;
                             margin-top: -30px;
+                        }
+                        
+                        h2 {
+                            font-size: 2.7em;
+                            font-weight: bold;
+                        }
+                        
+                        .chicken-div {
+                            background-color: #f0ad4e;
+                            border-color: #eea236;
+                            padding: 35px;
+                        }
+                        
+                        @media(min-width: 768px) {
+                            #header-nav {
+                                height: 100px;
+                            }
                         }
