--- a/css/style.css
+++ b/css/style.css
@@ -51,12 +51,19 @@
                         h2 {
                             font-size: 2.7em;
                             font-weight: bold;
+                            margin-bottom: 40px;
                         }
                         
                         .chicken-div {
                             background-color: #f0ad4e;
                             border-color: #eea236;
                             padding: 35px;
+                        }
+                        
+                        .chicken-div h3 {
+                            font-weight: bold;
+                            position: relative;
+                            top: -20px;
                         }
                         
                         @media(min-width: 768px) {
